# xnippet

./: .gitignore  README.md  pyproject.toml
examples/docs/: PLUGIN.md  PROJECT_CONFIG.md  RECIPE.md  SCHEMA.md  TESTING_STANDARDS.md
examples/plugin/plugin_example/: manifest.yaml
src/xnippet/: __init__.py  main.py  manager.py
src/xnippet/config/: logging.py
src/xnippet/fetcher/: __init__.py  base.py  plugins.py  snippets.py
src/xnippet/formatter/: datetime.py  io.py
src/xnippet/snippet/: __init__.py  base.py  plugin.py  schema.py  simple.py
tests/: 01_config_test.py  02_fetcher_test.py  conftest.py  logging.yaml  logging_script.py
xnippy/: __init__.py  config.yaml  main.py  manager.py  types.py
xnippy/fetcher/: base.py  snippets.py
xnippy/formatter/: __init__.py
xnippy/raiser/: types.py  warn.py
xnippy/snippet/: base.py  plugin.py
xnippy/yaml/: config.yaml
